# streamlit_busan_world_expo

./: .prettierrc  busan_world_expo.py  config.toml  data.xlsx  data_chinese.xlsx  data_english.xlsx  data_jp.xlsx  data_korean.xlsx  main.py  pyproject.toml  requirements.txt  style.py  translater.py
.streamlit/: config.toml
assets/: __init__.py  style.css
data/: pos.py  restaurant.py  tourist.py
i18n/: __init__.py  _default.json  bg.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fil.json  fr.json  hu.json  id.json  it.json  ja.json  ko.json  lt.json  lv.json  ms.json  nb.json  nl.json  pl.json  pt.json  ro.json  ru.json  sk.json  sl.json  sv.json  ta.json  th.json  tl.json  tr.json  uk.json  vi.json  zh-Hans.json  zh-Hant.json  zh.json
streamlit_busan_world_expo/: busan_world_expo.py
